# TDB/src/main/java/alaaesam/tdb/model/dto/RegisterUserDTO.java
@@ -11,9 +11,7 @@ import java.io.Serializable;
 public class RegisterUserDTO implements Serializable {
     private String userName;
     private String email;
+    private String role;
     private String password;
-    private String firstName;
-    private String lastName;
-    private String mobileNumber;
 }
 
